--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -27,7 +27,7 @@
       <!-- ІНПУТ І КНОПКА -->
       <div class="flex items-center border-b ">
         <input id="city-input" type="text" placeholder="Введіть місто"
-          class="  w-25 p-1 text-sm bg-transparent cursor-text  focus:bg-transparent " autocomplete="off">
+          class="  w-36 sm:w-48  p-1 text-sm bg-transparent cursor-text  focus:bg-transparent " autocomplete="off">
         <button id="get-weather" class="cursor-pointer">
           <img src="/icons/search-interface-symbol.png" alt="Отримати погоду" class="w-3 h-3">
         </button>
@@ -40,15 +40,15 @@
       <div id="weather-card" class=" p-6  text-center w-full max-w-xs sm:max-w-sm">
         <div class="flex items-center justify-center gap-4">
           <!-- Температура зліва -->
-          <p id="temperature" class="text-5xl font-semibold">20°C</p>
+          <p id="temperature" class="text-5xl font-semibold"></p>
 
           <!-- Інший контент справа -->
           <div class="city-date  ">
-            <h2 id="city-name" class="text-2xl font-semibold ">Місто</h2>
+            <h2 id="city-name" class="text-2xl font-semibold "></h2>
             <div class="date-hours flex items-center gap-1 text-xs text-gray-700 whitespace-nowrap">
-              <p id="time">12:34</p>
-              <p id="weekday">Понеділок</p>
-              <p id="date">18 сер 2025</p>
+              <p id="time"></p>
+              <p id="weekday"></p>
+              <p id="date"></p>
             </div>
           </div>
         </div>
@@ -57,32 +57,32 @@
 
     <div class="bottom-section h-[70vh] w-full flex justify-center ">
       <div class="weather-details  backdrop-blur-md px-10 pt-5 max-w-md w-full text-gray-800">
-        <h4 class="text-center my-6">Погода детальніше</h4>
-        <div class="flex justify-between mb-5">
-          <p>Макс. температура:</p>
-          <p id="temp-max">--°C</p>
+        <h3 class="text-xl text-center my-13">Погода детальніше</h3>
+        <div class="flex justify-between mb-6">
+          <p class="text-lg md:text-xl">Макс. температура:</p>
+          <p id="temp-max" class="text-lg md:text-xl font-semibold"></p>
         </div>
-        <div class="flex justify-between mb-5">
-          <p>Мін. температура:</p>
-          <p id="temp-min">--°C</p>
+        <div class="flex justify-between mb-6">
+          <p class="text-lg md:text-xl">Мін. температура:</p>
+          <p id="temp-min" class="text-lg md:text-xl font-semibold"></p>
         </div>
-        <div class="flex justify-between mb-5">
-          <p>Вологість:</p>
-          <p id="humidity">--%</p>
+        <div class="flex justify-between mb-6">
+          <p class="text-lg md:text-xl">Вологість:</p>
+          <p id="humidity" class="text-lg md:text-xl font-semibold"></p>
         </div>
-        <div class="flex justify-between mb-5">
-          <p>Хмарність:</p>
-          <p id="clouds">--%</p>
+        <div class="flex justify-between mb-6">
+          <p class="text-lg md:text-xl">Хмарність:</p>
+          <p id="clouds" class="text-lg md:text-xl font-semibold"></p>
         </div>
-        <div class="flex justify-between mb-5">
-          <p>Вітряність:</p>
-          <p id="wind">-- м/с</p>
+        <div class="flex justify-between mb-6">
+          <p class="text-lg md:text-xl">Вітряність:</p>
+          <p id="wind" class="text-lg md:text-xl font-semibold"></p>
         </div>
       </div>
     </div>
 
-    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <div id="app"></div>
 </body>
 
 </html>
