--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -5,47 +5,57 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
   <title>Vite App</title>
 </head>
 
-<body>
+<body class="lg:overflow-hidden">
   <!-- фон-відео -->
   <video id="background-video" autoplay muted loop class="absolute top-0 left-0 w-full h-full object-cover -z-10">
     <source src="/video-backround/sunbackround.mp4" type="video/mp4">
   </video>
 
-
-  <div class="top-section  ">
-    <!-- ЗАЙМАЄ ВСЮ ШИРИНУ -->
-    <div class="w-full flex justify-between  mt-1 px-2">
-
-      <!-- ЛОГО ЗЛІВА -->
-      <div class="flex items-center">
-        <img src="/icons/letter-w.png" alt="Лого" class="w-8 h-8 mr-3">
-      </div>
-
-      <!-- ІНПУТ І КНОПКА -->
-      <div class="flex items-center border-b ">
-        <input id="city-input" type="text" placeholder="Введіть місто"
-          class="  w-36 sm:w-48  p-1 text-sm bg-transparent cursor-text  focus:bg-transparent " autocomplete="off">
-        <button id="get-weather" class="cursor-pointer">
-          <img src="/icons/search-interface-symbol.png" alt="Отримати погоду" class="w-3 h-3">
-        </button>
-      </div>
+  <!-- Верхня панель з лого та пошуком -->
+  <div class="top-section w-full mt-1 px-2 md:mt-3 md:px-5 flex justify-between items-center relative z-10 lg:hidden">
+    <!-- Лого -->
+    <div class="flex items-center">
+      <img src="/icons/letter-w.png" alt="Лого" class="w-8 h-8 ml-2 md:ml-0 md:w-12 md:h-12">
     </div>
 
-    <!-- ВІДЦЕНТРОВАНО -->
-    <div class="top-section h-[30vh] flex flex-col justify-end items-center ">
-      <!-- ВЕРХНЯ ЧАСТИНА ДЕ МІСТО,ТЕМП,ЧАС І ДАТА -->
-      <div id="weather-card" class=" p-6  text-center w-full max-w-xs sm:max-w-sm">
-        <div class="flex items-center justify-center gap-4">
-          <!-- Температура зліва -->
-          <p id="temperature" class="text-5xl font-semibold"></p>
+    <!-- Пошуковий рядок -->
+    <div class="flex items-center border-b w-auto lg:hidden">
+      <input id="city-input" type="text" placeholder="Введіть місто"
+        class="w-36 sm:w-48 md:w-90 p-1 text-sm md:text-xl bg-transparent cursor-text focus:bg-transparent"
+        autocomplete="off">
+      <button id="get-weather" class="cursor-pointer">
+        <img src="/icons/search-interface-symbol.png" alt="Отримати погоду" class="w-3 h-3 md:w-6 md:h-6">
+      </button>
+    </div>
+  </div>
 
-          <!-- Інший контент справа -->
-          <div class="city-date  ">
-            <h2 id="city-name" class="text-2xl font-semibold "></h2>
-            <div class="date-hours flex items-center gap-1 text-xs text-gray-700 whitespace-nowrap">
+  <!-- Основний контейнер -->
+  <div class="flex flex-col lg:flex-row w-full h-full lg:h-screen overflow-hidden relative">
+
+    <!-- Ліва частина: температура і місто -->
+    <div class="top-section h-[30vh] lg:h-[97vh] lg:w-1/2 flex flex-col justify-end lg:justify-between items-center ">
+
+      <!-- ЛОГО НА ВЕЛИКИХ ЕКРАНАХ -->
+      <div class="hidden lg:flex mt-5 ml-5 ml-l w-full justify-start ">
+        <img src="/icons/letter-w.png" alt="Лого" class="w-14 h-14">
+      </div>
+
+      <div id="weather-card" class="p-6 md:p-8 text-center w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg">
+        <div class="flex items-center justify-center gap-4">
+          <!-- Температура -->
+          <p id="temperature" class="text-5xl md:text-8xl"></p>
+
+          <!-- Місто і дата -->
+          <div class="city-date">
+            <h2 id="city-name" class="text-2xl md:text-5xl lg:text-6xl font-semibold"></h2>
+            <div
+              class="date-hours flex items-center gap-1 text-xs md:text-lg lg:text-2xl text-gray-700 whitespace-nowrap">
               <p id="time"></p>
               <p id="weekday"></p>
               <p id="date"></p>
@@ -55,28 +65,47 @@
       </div>
     </div>
 
-    <div class="bottom-section h-[70vh] w-full flex justify-center ">
-      <div class="weather-details  backdrop-blur-md px-10 pt-5 max-w-md w-full text-gray-800">
-        <h3 class="text-xl text-center my-13">Погода детальніше</h3>
-        <div class="flex justify-between mb-6">
-          <p class="text-lg md:text-xl">Макс. температура:</p>
-          <p id="temp-max" class="text-lg md:text-xl font-semibold"></p>
+    <!-- Права частина: блюр і деталі погоди -->
+    <div class="bottom-section lg:w-1/2 w-full h-[70vh] lg:h-full relative flex justify-center">
+      <!-- Блюр -->
+      <div class="backdrop-blur-md absolute top-0 left-0 w-full h-full lg:h-[120%] lg:-top-[20%] z-0"></div>
+
+      <!-- Контент поверх блюру -->
+      <div class="relative z-10 w-full max-w-full px-10 md:px-15 pt-5 text-gray-800">
+
+        <!-- Пошуковий рядок -->
+        <div class="flex items-center border-b mb-5 hidden lg:flex">
+          <input id="city-input-desktop" type="text" placeholder="Введіть місто"
+            class=" lg:w-150 p-2 lg:text-2xl bg-transparent cursor-text focus:bg-transparent" autocomplete="off">
+          <button id="get-weather-desktop" class="cursor-pointer hover:scale-110 transition-transform duration-200">
+            <img src="/icons/search-interface-symbol.png" alt="Отримати погоду" class="lg:w-6 lg:h-6">
+          </button>
         </div>
-        <div class="flex justify-between mb-6">
-          <p class="text-lg md:text-xl">Мін. температура:</p>
-          <p id="temp-min" class="text-lg md:text-xl font-semibold"></p>
+
+
+
+        <h3 class="text-lg md:text-3xl lg:text-4xl text-center my-13 md:my-20 ">Погода детальніше</h3>
+
+        <!-- Деталі погоди -->
+        <div class="flex justify-between mb-6 md:mb-12 lg:mb-15">
+          <p class="text-base md:text-2xl ">Макс. температура:</p>
+          <p id="temp-max" class="text-base md:text-2xl font-semibold"></p>
         </div>
-        <div class="flex justify-between mb-6">
-          <p class="text-lg md:text-xl">Вологість:</p>
-          <p id="humidity" class="text-lg md:text-xl font-semibold"></p>
+        <div class="flex justify-between mb-6 md:mb-12 lg:mb-15">
+          <p class="text-base md:text-2xl">Мін. температура:</p>
+          <p id="temp-min" class="text-base md:text-2xl  font-semibold"></p>
         </div>
-        <div class="flex justify-between mb-6">
-          <p class="text-lg md:text-xl">Хмарність:</p>
-          <p id="clouds" class="text-lg md:text-xl font-semibold"></p>
+        <div class="flex justify-between mb-6 md:mb-12 lg:mb-15">
+          <p class="text-base md:text-2xl ">Вологість:</p>
+          <p id="humidity" class="text-base md:text-2xl  font-semibold"></p>
         </div>
-        <div class="flex justify-between mb-6">
-          <p class="text-lg md:text-xl">Вітряність:</p>
-          <p id="wind" class="text-lg md:text-xl font-semibold"></p>
+        <div class="flex justify-between mb-6 md:mb-12 lg:mb-15">
+          <p class="text-base md:text-2xl ">Хмарність:</p>
+          <p id="clouds" class="text-base md:text-2xl  font-semibold"></p>
+        </div>
+        <div class="flex justify-between mb-6 md:mb-12 lg:mb-15">
+          <p class="text-base md:text-2xl ">Вітряність:</p>
+          <p id="wind" class="text-base md:text-2xl  font-semibold"></p>
         </div>
       </div>
     </div>
