--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -49,11 +49,11 @@
       <div id="weather-card" class="p-6 md:p-8 text-center w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg">
         <div class="flex items-center justify-center gap-4">
           <!-- Температура -->
-          <p id="temperature" class="text-5xl md:text-8xl"></p>
+          <p id="temperature" class="text-5xl md:text-6xl"></p>
 
           <!-- Місто і дата -->
           <div class="city-date">
-            <h2 id="city-name" class="text-2xl md:text-5xl lg:text-6xl font-semibold"></h2>
+            <h2 id="city-name" class="text-2xl md:text-4xl lg:text-6xl font-semibold"></h2>
             <div
               class="date-hours flex items-center gap-1 text-xs md:text-lg lg:text-2xl text-gray-700 whitespace-nowrap">
               <p id="time"></p>
@@ -84,26 +84,26 @@
 
 
 
-        <h3 class="text-lg md:text-3xl lg:text-4xl text-center my-13 md:my-20 ">Погода детальніше</h3>
+        <h3 class="text-lg md:text-3xl lg:text-4xl text-center my-13  ">Погода детальніше</h3>
 
         <!-- Деталі погоди -->
-        <div class="flex justify-between mb-6 md:mb-12 lg:mb-15">
+        <div class="flex justify-between mb-6 md:mb-10 lg:mb-15">
           <p class="text-base md:text-2xl ">Макс. температура:</p>
           <p id="temp-max" class="text-base md:text-2xl font-semibold"></p>
         </div>
-        <div class="flex justify-between mb-6 md:mb-12 lg:mb-15">
+        <div class="flex justify-between mb-6 md:mb-10 lg:mb-15">
           <p class="text-base md:text-2xl">Мін. температура:</p>
           <p id="temp-min" class="text-base md:text-2xl  font-semibold"></p>
         </div>
-        <div class="flex justify-between mb-6 md:mb-12 lg:mb-15">
+        <div class="flex justify-between mb-6 md:mb-10 lg:mb-15">
           <p class="text-base md:text-2xl ">Вологість:</p>
           <p id="humidity" class="text-base md:text-2xl  font-semibold"></p>
         </div>
-        <div class="flex justify-between mb-6 md:mb-12 lg:mb-15">
+        <div class="flex justify-between mb-6 md:mb-10 lg:mb-15">
           <p class="text-base md:text-2xl ">Хмарність:</p>
           <p id="clouds" class="text-base md:text-2xl  font-semibold"></p>
         </div>
-        <div class="flex justify-between mb-6 md:mb-12 lg:mb-15">
+        <div class="flex justify-between mb-6 md:mb-10 lg:mb-15">
           <p class="text-base md:text-2xl ">Вітряність:</p>
           <p id="wind" class="text-base md:text-2xl  font-semibold"></p>
         </div>
